--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,13 +19,13 @@
 	rel="stylesheet">
 
 <!-- Vendor CSS Files -->
-<link href="/assets/vendor/bootstrap/css/bootstrap.min.css"	rel="stylesheet">
-<link href="/assets/vendor/bootstrap-icons/bootstrap-icons.css"	rel="stylesheet">
-<link href="/assets/vendor/datatable/css/dataTables.bootstrap5.min.css"	rel="stylesheet"> 
-<link rel="stylesheet" href="/assets/vendor/font-awesome/css/font-awesome.min.css">
+<link href="{{site.url}}/assets/vendor/bootstrap/css/bootstrap.min.css"	rel="stylesheet">
+<link href="{{site.url}}/assets/vendor/bootstrap-icons/bootstrap-icons.css"	rel="stylesheet">
+<link href="{{site.url}}/assets/vendor/datatable/css/dataTables.bootstrap5.min.css"	rel="stylesheet"> 
+<link rel="stylesheet" href="{{site.url}}/assets/vendor/font-awesome/css/font-awesome.min.css">
 <!-- Template Main CSS File -->
-<link href="/assets/css/style.css" rel="stylesheet">
-<link href="/assets/css/syntax.css" rel="stylesheet">
+<link href="{{site.url}}/assets/css/style.css" rel="stylesheet">
+<link href="{{site.url}}/assets/css/syntax.css" rel="stylesheet">
 
 
 </head>
