--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,12 +3,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{{page.title}}</title>
-    {% if page.description %}
-    <meta name="description" content="{{page.description}}" />
-    <meta property="og:description" content="{{page.description}}" />
-    {% else %}
-        <meta name="description" content="{{page.excerpt | strip_html | strip}}" />
-        <meta property="og:description" content="{{page.excerpt | strip_html| strip}}" />
+    {% if page.metaDescription %}
+    <meta name="description" content="{{page.metaDescription | strip_html | strip}}" />
+    <meta property="og:description" content="{{page.metaDescription | strip_html | strip}}" />
     {% endif %}
     <link rel="canonical" href="{{site.baseurl}}{{page.url}}" />
     <meta property="og:url" content="{{site.baseurl}}{{page.url}}" />
