--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,7 +3,7 @@
 
     <ul class="sidebar-nav" id="sidebar-nav">
     <li class="nav-item">
-        <a class="nav-link " href="/">
+        <a class="nav-link " href="{{site.baseurl}}/">
             <i class="bi bi-grid"></i>
             <span>Home</span>
         </a>
