--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,12 +30,12 @@
                 </a><!-- End Profile Iamge Icon -->
                 <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
                  <li>
-                    <a class="dropdown-item d-flex align-items-center" href="/">
+                    <a class="dropdown-item d-flex align-items-center" href="{{site.baseurl}}/">
                         Home
                     </a>
                   </li>
                   <li>
-                    <a class="dropdown-item d-flex align-items-center" href="/tags/">
+                    <a class="dropdown-item d-flex align-items-center" href="{{site.baseurl}}/tags/">
                      Tags
                     </a>
                   </li>
